// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SendTransfer > should render form step (lg) 1`] = `
<DocumentFragment>
  <section
    data-testid="SendTransfer__form-step"
  >
    <div
      class="w-full sm:mt-8"
    >
      <div
        class="flex flex-col"
      >
        <span
          class="mx-auto mb-2 inline-block font-semibold text-theme-secondary-text sm:hidden"
        >
          Send ARK
        </span>
        <ul
          class="flex flex-row gap-2"
        >
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
          />
        </ul>
      </div>
      <div
        class="flex flex-col justify-between sm:flex-row"
      >
        <div
          class="flex items-end justify-between bg-theme-background mt-8 hidden sm:block"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                data-testid="icon-SendTransactionLight"
              >
                <div
                  style="height: 24px; width: 24px;"
                >
                  <svg
                    fill="none"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 24 25"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_13879_104416)"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M18.8821 8.94457H13.7264C13.0146 8.94457 12.4375 8.3675 12.4375 7.65565V2.5"
                        fill="#E6EFF9"
                        fill-rule="evenodd"
                      />
                      <path
                        d="M18.8821 8.94457H13.7264C13.0146 8.94457 12.4375 8.3675 12.4375 7.65565V2.5"
                        stroke="#235B95"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        d="M7.99174 21.8337H3.41391C2.70207 21.8337 2.125 21.2566 2.125 20.5448V3.78891C2.125 3.07707 2.70207 2.5 3.41391 2.5H12.5472C12.8891 2.49985 13.217 2.63554 13.4588 2.87722L18.5037 7.92289C18.7451 8.16452 18.8808 8.49212 18.8809 8.83372"
                        stroke="#235B95"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M9.02802 17.1926C8.71518 17.1043 8.49639 16.8225 8.4885 16.4975C8.48061 16.1725 8.68545 15.8804 8.99364 15.7771L18.994 12.5155C19.1276 12.472 19.2743 12.5069 19.3739 12.606C19.4735 12.7051 19.5092 12.8516 19.4664 12.9854L16.2073 22.9907C16.1044 23.2995 15.812 23.5049 15.4867 23.4968C15.1613 23.4888 14.8793 23.2693 14.7918 22.9559L13.6727 18.3067L9.02802 17.1926Z"
                        fill="#E6EFF9"
                        fill-rule="evenodd"
                        stroke="#235B95"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </g>
                    <defs>
                      <clippath
                        id="clip0_13879_104416"
                      >
                        <rect
                          fill="white"
                          height="24"
                          transform="translate(24 24.5) rotate(-180)"
                          width="24"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </div>
              </div>
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Send ARK
              </h1>
            </div>
            <div
              class="flex items-center text-sm leading-5 text-theme-secondary-text md:text-base"
              data-testid="header__subtitle"
            >
              Enter details below to send your transaction.
            </div>
          </div>
        </div>
        <div
          class="mt-8 sm:mt-0"
        >
          <div
            class="hidden sm:flex sm:h-full sm:align-bottom"
          >
            <button
              class="mt-auto flex w-full items-center space-x-2 rounded border-2 border-theme-primary-100 px-5 py-3 text-theme-secondary-700 transition-colors duration-300 hover:border-theme-primary-100 hover:bg-theme-primary-100 hover:text-theme-primary-600 focus:outline-none focus:ring-2 focus:ring-theme-primary-400 dark:border-theme-secondary-800 dark:text-theme-secondary-500 dark:hover:border-theme-secondary-800 dark:hover:bg-theme-secondary-800 dark:hover:text-white sm:w-auto sm:py-5 group"
              data-testid="QRCodeModalButton"
              type="button"
            >
              <div>
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="qr-code"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M8 1H1v7h7V1zm11 0h-7v7h7V1zM8 12H1v7h7v-7zm4 0h2m-2 3v4h2m1-3.5h4V12h-2m0 7h2"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="text-base font-semibold leading-5"
              >
                Scan
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-4 pt-4"
    >
      <fieldset
        class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
      >
        <div
          data-testid="sender-address"
        >
          <div
            class="mb-2 flex items-center justify-between"
          >
            <label
              class="mb-0 text-sm font-semibold leading-[17px] text-theme-secondary-text hover:!text-theme-primary-600"
              data-testid="FormLabel"
              for="senderAddress"
            >
              Sender
            </label>
            <button
              class="space-x-3 relative items-center justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none block p-0 text-sm text-theme-navy-600 sm:hidden"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Scan QR-Code
              </div>
            </button>
          </div>
          <button
            class="relative w-full rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
            data-testid="SelectAddress__wrapper"
            type="button"
          >
            <span
              class="absolute inset-y-0 left-14 flex items-center border border-transparent right-13 left-4"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              />
            </span>
            <div
              class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
            >
              <div
                class="relative flex h-full flex-1 invisible"
              >
                <input
                  autocomplete="off"
                  class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                  data-testid="SelectAddress__input"
                  name="senderAddress"
                  readonly=""
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="Input__addon-end"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center space-x-3 rounded bg-transparent p-1 text-theme-secondary-700 transition-colors hover:bg-theme-primary-100 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white"
                  >
                    <div>
                      <div
                        style="height: 20px; width: 20px;"
                      >
                        <svg
                          id="user"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <circle
                              cx="10"
                              cy="5"
                              r="4"
                            />
                            <path
                              d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </button>
        </div>
      </fieldset>
      <div
        data-testid="recipient-address"
      >
        <div
          class="add-recipient-wrapper"
        >
          <div
            class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
          >
            <div
              class="text-sm font-semibold transition-colors duration-100"
            >
              Recipient
            </div>
            <div
              class="flex items-center space-x-2"
            >
              <span>
                <div
                  class="flex items-center"
                >
                  <button
                    class="font-semibold select-none text-sm first:mr-2 last:ml-2 text-theme-secondary-700 dark:text-theme-secondary-200"
                    type="button"
                  >
                    Single
                  </button>
                  <label
                    class="flex items-center cursor-pointer h-3"
                  >
                    <input
                      class="toggle-input sr-only"
                      type="checkbox"
                    />
                    <div
                      class="toggle-handle relative inline-flex h-[5px] rounded-full bg-theme-primary-100 dark:bg-theme-secondary-800 w-6"
                    >
                      <span
                        class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-600 h-3 w-3 handle-inner"
                      />
                    </div>
                  </label>
                  <button
                    class="font-semibold select-none text-theme-secondary-500 dark:text-theme-secondary-700 text-sm first:mr-2 last:ml-2"
                    type="button"
                  >
                    Multiple
                  </button>
                </div>
              </span>
              <div
                class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
              >
                <div>
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="question-mark-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="space-y-4 rounded-xl"
          >
            <div
              class="space-y-4"
            >
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
              >
                <div>
                  <div
                    class="relative flex w-full items-center text-left"
                    data-testid="SelectRecipient__wrapper"
                  >
                    <div
                      class="relative w-full"
                      data-testid="SelectDropdown"
                    >
                      <div
                        class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 sr-only"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="off"
                            class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                            data-testid="select-list__input"
                            name="recipientAddress"
                            readonly=""
                            tabindex="-1"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="w-full"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="SelectRecipient__dropdown-menu"
                          role="combobox"
                        >
                          <div>
                            <label
                              for="SelectRecipient__dropdown-input"
                              id="SelectRecipient__dropdown-label"
                            />
                            <div
                              class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                            >
                              <div
                                class="relative flex h-full flex-1"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="SelectRecipient__dropdown-menu"
                                  aria-invalid="false"
                                  aria-labelledby="SelectRecipient__dropdown-label"
                                  autocomplete="off"
                                  class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default text-theme-secondary-text"
                                  data-testid="SelectDropdown__input"
                                  disabled=""
                                  id="SelectRecipient__dropdown-input"
                                  name="recipientAddress"
                                  placeholder="Address"
                                  type="text"
                                  value=""
                                />
                              </div>
                              <div
                                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                                data-testid="Input__addon-end"
                              >
                                <div
                                  class=""
                                >
                                  <div
                                    class="flex items-center"
                                    data-testid="SelectRecipient__select-recipient"
                                  >
                                    <div>
                                      <div
                                        style="height: 20px; width: 20px;"
                                      >
                                        <svg
                                          id="user"
                                          style="height: 100%; width: 100%;"
                                          viewBox="0 0 20 20"
                                          x="0"
                                          xml:space="preserve"
                                          xmlns="http://www.w3.org/2000/svg"
                                          y="0"
                                        >
                                          <g
                                            fill="none"
                                            stroke="currentColor"
                                            stroke-linecap="round"
                                            stroke-linejoin="round"
                                            stroke-width="2"
                                          >
                                            <circle
                                              cx="10"
                                              cy="5"
                                              r="4"
                                            />
                                            <path
                                              d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                            />
                                          </g>
                                        </svg>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            aria-labelledby="SelectRecipient__dropdown-label"
                            id="SelectRecipient__dropdown-menu"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 hover:!text-theme-primary-600"
                  data-testid="FormLabel"
                  for="amount"
                >
                  <span
                    class="items-centers flex w-full justify-between"
                  >
                    <div
                      class="flex flex-row items-center gap-1.5"
                    >
                      <span>
                        Amount
                      </span>
                      <span
                        class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 sm:hidden"
                      >
                        (
                        <span
                          class="whitespace-nowrap"
                          data-testid="Amount"
                        >
                          0
                        </span>
                        )
                      </span>
                    </div>
                    <div
                      class="flex flex-row items-center gap-2"
                    >
                      <span
                        class="inline-flex"
                      >
                        <button
                          class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 p-0 text-sm text-theme-navy-600"
                          data-testid="AddRecipient__send-all"
                          disabled=""
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Send All
                          </div>
                        </button>
                      </span>
                    </div>
                  </span>
                </label>
                <div
                  class="flex space-x-2"
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base text-theme-secondary-text"
                            data-testid="AddRecipient__amount"
                            disabled=""
                            name="amount"
                            placeholder="Enter an amount"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendTransfer > should render form step (xs) 1`] = `
<DocumentFragment>
  <section
    data-testid="SendTransfer__form-step"
  >
    <div
      class="w-full sm:mt-8"
    >
      <div
        class="flex flex-col"
      >
        <span
          class="mx-auto mb-2 inline-block font-semibold text-theme-secondary-text sm:hidden"
        >
          Send ARK
        </span>
        <ul
          class="flex flex-row gap-2"
        >
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
          />
        </ul>
      </div>
      <div
        class="flex flex-col justify-between sm:flex-row"
      >
        <div
          class="flex items-end justify-between bg-theme-background mt-8 hidden sm:block"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                data-testid="icon-SendTransactionLight"
              >
                <div
                  style="height: 24px; width: 24px;"
                >
                  <svg
                    fill="none"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 24 25"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_13879_104416)"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M18.8821 8.94457H13.7264C13.0146 8.94457 12.4375 8.3675 12.4375 7.65565V2.5"
                        fill="#E6EFF9"
                        fill-rule="evenodd"
                      />
                      <path
                        d="M18.8821 8.94457H13.7264C13.0146 8.94457 12.4375 8.3675 12.4375 7.65565V2.5"
                        stroke="#235B95"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        d="M7.99174 21.8337H3.41391C2.70207 21.8337 2.125 21.2566 2.125 20.5448V3.78891C2.125 3.07707 2.70207 2.5 3.41391 2.5H12.5472C12.8891 2.49985 13.217 2.63554 13.4588 2.87722L18.5037 7.92289C18.7451 8.16452 18.8808 8.49212 18.8809 8.83372"
                        stroke="#235B95"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M9.02802 17.1926C8.71518 17.1043 8.49639 16.8225 8.4885 16.4975C8.48061 16.1725 8.68545 15.8804 8.99364 15.7771L18.994 12.5155C19.1276 12.472 19.2743 12.5069 19.3739 12.606C19.4735 12.7051 19.5092 12.8516 19.4664 12.9854L16.2073 22.9907C16.1044 23.2995 15.812 23.5049 15.4867 23.4968C15.1613 23.4888 14.8793 23.2693 14.7918 22.9559L13.6727 18.3067L9.02802 17.1926Z"
                        fill="#E6EFF9"
                        fill-rule="evenodd"
                        stroke="#235B95"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </g>
                    <defs>
                      <clippath
                        id="clip0_13879_104416"
                      >
                        <rect
                          fill="white"
                          height="24"
                          transform="translate(24 24.5) rotate(-180)"
                          width="24"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </div>
              </div>
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Send ARK
              </h1>
            </div>
            <div
              class="flex items-center text-sm leading-5 text-theme-secondary-text md:text-base"
              data-testid="header__subtitle"
            >
              Enter details below to send your transaction.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-4 pt-4"
    >
      <fieldset
        class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
      >
        <div
          data-testid="sender-address"
        >
          <div
            class="mb-2 flex items-center justify-between"
          >
            <label
              class="mb-0 text-sm font-semibold leading-[17px] text-theme-secondary-text hover:!text-theme-primary-600"
              data-testid="FormLabel"
              for="senderAddress"
            >
              Sender
            </label>
            <button
              class="space-x-3 relative items-center justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none block p-0 text-sm text-theme-navy-600 sm:hidden"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Scan QR-Code
              </div>
            </button>
          </div>
          <button
            class="relative w-full rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
            data-testid="SelectAddress__wrapper"
            type="button"
          >
            <span
              class="absolute inset-y-0 left-14 flex items-center border border-transparent right-13 left-4"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              />
            </span>
            <div
              class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
            >
              <div
                class="relative flex h-full flex-1 invisible"
              >
                <input
                  autocomplete="off"
                  class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                  data-testid="SelectAddress__input"
                  name="senderAddress"
                  readonly=""
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="Input__addon-end"
              >
                <div
                  class=""
                >
                  <div
                    class="flex items-center space-x-3 rounded bg-transparent p-1 text-theme-secondary-700 transition-colors hover:bg-theme-primary-100 hover:text-theme-primary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white"
                  >
                    <div>
                      <div
                        style="height: 20px; width: 20px;"
                      >
                        <svg
                          id="user"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <circle
                              cx="10"
                              cy="5"
                              r="4"
                            />
                            <path
                              d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </button>
        </div>
      </fieldset>
      <div
        data-testid="recipient-address"
      >
        <div
          class="add-recipient-wrapper"
        >
          <div
            class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
          >
            <div
              class="text-sm font-semibold transition-colors duration-100"
            >
              Recipient
            </div>
            <div
              class="flex items-center space-x-2"
            >
              <span>
                <div
                  class="flex items-center"
                >
                  <button
                    class="font-semibold select-none text-sm first:mr-2 last:ml-2 text-theme-secondary-700 dark:text-theme-secondary-200"
                    type="button"
                  >
                    Single
                  </button>
                  <label
                    class="flex items-center cursor-pointer h-3"
                  >
                    <input
                      class="toggle-input sr-only"
                      type="checkbox"
                    />
                    <div
                      class="toggle-handle relative inline-flex h-[5px] rounded-full bg-theme-primary-100 dark:bg-theme-secondary-800 w-6"
                    >
                      <span
                        class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-600 h-3 w-3 handle-inner"
                      />
                    </div>
                  </label>
                  <button
                    class="font-semibold select-none text-theme-secondary-500 dark:text-theme-secondary-700 text-sm first:mr-2 last:ml-2"
                    type="button"
                  >
                    Multiple
                  </button>
                </div>
              </span>
              <div
                class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
              >
                <div>
                  <div
                    style="height: 10px; width: 10px;"
                  >
                    <svg
                      id="question-mark-small"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 10 10"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="space-y-4 rounded-xl"
          >
            <div
              class="space-y-4"
            >
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
              >
                <div>
                  <div
                    class="relative flex w-full items-center text-left"
                    data-testid="SelectRecipient__wrapper"
                  >
                    <div
                      class="relative w-full"
                      data-testid="SelectDropdown"
                    >
                      <div
                        class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 sr-only"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="off"
                            class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                            data-testid="select-list__input"
                            name="recipientAddress"
                            readonly=""
                            tabindex="-1"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="w-full"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="SelectRecipient__dropdown-menu"
                          role="combobox"
                        >
                          <div>
                            <label
                              for="SelectRecipient__dropdown-input"
                              id="SelectRecipient__dropdown-label"
                            />
                            <div
                              class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                            >
                              <div
                                class="relative flex h-full flex-1"
                              >
                                <input
                                  aria-autocomplete="list"
                                  aria-controls="SelectRecipient__dropdown-menu"
                                  aria-invalid="false"
                                  aria-labelledby="SelectRecipient__dropdown-label"
                                  autocomplete="off"
                                  class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default text-theme-secondary-text"
                                  data-testid="SelectDropdown__input"
                                  disabled=""
                                  id="SelectRecipient__dropdown-input"
                                  name="recipientAddress"
                                  placeholder="Address"
                                  type="text"
                                  value=""
                                />
                              </div>
                              <div
                                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                                data-testid="Input__addon-end"
                              >
                                <div
                                  class=""
                                >
                                  <div
                                    class="flex items-center"
                                    data-testid="SelectRecipient__select-recipient"
                                  >
                                    <div>
                                      <div
                                        style="height: 20px; width: 20px;"
                                      >
                                        <svg
                                          id="user"
                                          style="height: 100%; width: 100%;"
                                          viewBox="0 0 20 20"
                                          x="0"
                                          xml:space="preserve"
                                          xmlns="http://www.w3.org/2000/svg"
                                          y="0"
                                        >
                                          <g
                                            fill="none"
                                            stroke="currentColor"
                                            stroke-linecap="round"
                                            stroke-linejoin="round"
                                            stroke-width="2"
                                          >
                                            <circle
                                              cx="10"
                                              cy="5"
                                              r="4"
                                            />
                                            <path
                                              d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                            />
                                          </g>
                                        </svg>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            aria-labelledby="SelectRecipient__dropdown-label"
                            id="SelectRecipient__dropdown-menu"
                            role="listbox"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <fieldset
                class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 hover:!text-theme-primary-600"
                  data-testid="FormLabel"
                  for="amount"
                >
                  <span
                    class="items-centers flex w-full justify-between"
                  >
                    <div
                      class="flex flex-row items-center gap-1.5"
                    >
                      <span>
                        Amount
                      </span>
                      <span
                        class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 sm:hidden"
                      >
                        (
                        <span
                          class="whitespace-nowrap"
                          data-testid="Amount"
                        >
                          0
                        </span>
                        )
                      </span>
                    </div>
                    <div
                      class="flex flex-row items-center gap-2"
                    >
                      <span
                        class="inline-flex"
                      >
                        <button
                          class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 p-0 text-sm text-theme-navy-600"
                          data-testid="AddRecipient__send-all"
                          disabled=""
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Send All
                          </div>
                        </button>
                      </span>
                    </div>
                  </span>
                </label>
                <div
                  class="flex space-x-2"
                >
                  <div
                    class="flex-1"
                  >
                    <div
                      class="relative"
                    >
                      <div
                        class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base text-theme-secondary-text"
                            data-testid="AddRecipient__amount"
                            disabled=""
                            name="amount"
                            placeholder="Enter an amount"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendTransfer > should render review step 1`] = `
<DocumentFragment>
  <section
    data-testid="SendTransfer__review-step"
  >
    <div
      class="w-full sm:mt-8"
    >
      <div
        class="flex flex-col"
      >
        <span
          class="mx-auto mb-2 inline-block font-semibold text-theme-secondary-text sm:hidden"
        >
          Transaction Review
        </span>
        <ul
          class="flex flex-row gap-2"
        >
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
          />
        </ul>
      </div>
      <div
        class="flex flex-col justify-between sm:flex-row"
      >
        <div
          class="flex items-end justify-between bg-theme-background mt-8 hidden sm:block"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="text-theme-primary-600"
                data-testid="icon-DocumentView"
              >
                <div
                  style="height: 24px; width: 24px;"
                >
                  <svg
                    fill="none"
                    height="25"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 24 25"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_13880_105917)"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M18.8821 8.94457H13.7264C13.0146 8.94457 12.4375 8.3675 12.4375 7.65565V2.5"
                        fill="none"
                        fill-rule="evenodd"
                      />
                      <path
                        d="M18.8821 8.94457H13.7264C13.0146 8.94457 12.4375 8.3675 12.4375 7.65565V2.5"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        d="M5.99174 21.8337H3.41391C2.70207 21.8337 2.125 21.2566 2.125 20.5448V3.78891C2.125 3.07707 2.70207 2.5 3.41391 2.5H12.5472C12.8891 2.49985 13.217 2.63554 13.4588 2.87722L18.5037 7.92289C18.7451 8.16452 18.8808 8.49212 18.8809 8.83372V12.8113"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M8.35938 19.3003C8.35938 19.3003 10.9372 15.4336 14.8039 15.4336C18.6707 15.4336 21.2485 19.3003 21.2485 19.3003C21.2485 19.3003 18.6707 23.1671 14.8039 23.1671C10.9372 23.1671 8.35938 19.3003 8.35938 19.3003Z"
                        fill="none"
                        fill-rule="evenodd"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        d="M13.8984 20.6287C14.633 21.1309 15.6355 20.9426 16.1378 20.2081C16.64 19.4736 16.4517 18.471 15.7172 17.9688"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </g>
                    <defs>
                      <clippath
                        id="clip0_13880_105917"
                      >
                        <rect
                          fill="white"
                          height="24"
                          transform="translate(24 24.5) rotate(-180)"
                          width="24"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </div>
              </div>
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Transaction Review
              </h1>
            </div>
            <div
              class="flex items-center text-sm leading-5 text-theme-secondary-text md:text-base"
              data-testid="header__subtitle"
            >
              Review the transaction details below.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="-mx-3 mt-4 space-y-3 sm:mx-0 sm:space-y-4"
    >
      <div
        data-testid="DetailWrapper"
      >
        <div
          class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
          data-testid="DetailLabel"
        >
          <div
            class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
            data-testid="DetailLabelText"
          >
            Addressing
          </div>
        </div>
        <div
          class="overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-dark-700 sm:border flex flex-col gap-3 mt-0 sm:mt-2"
        >
          <div
            class="w-full break-words p-3 sm:px-6 sm:py-5 [.condensed_&]:sm:py-4"
          >
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-14 sm:min-w-[85px] sm:pr-6"
              >
                From
              </div>
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end sm:justify-start"
              >
                <span
                  class="font-semibold text-base text-theme-text text-sm leading-[17px] sm:leading-5 sm:text-base"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures transition-colors duration-200"
                    data-testid="TruncateEnd"
                  >
                    Mainsail Wallet …
                  </span>
                </span>
                <div
                  class="relative grow leading-[17px] sm:leading-5 text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:leading-5 sm:text-base w-full w-3/4 text-theme-secondary-500 dark:text-theme-secondary-700  font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                  </span>
                  <span>
                     
                  </span>
                </div>
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50"
                  >
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="copy"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="mt-3 flex w-full items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-14 sm:min-w-[85px] sm:pr-6"
              >
                To
              </div>
              <div
                class="flex w-full"
              >
                <div
                  class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end sm:justify-start"
                >
                  <span
                    class="font-semibold text-base text-theme-text text-sm leading-[17px] sm:leading-5 sm:text-base"
                    data-testid="Address__alias"
                  >
                    <span
                      class="no-ligatures transition-colors duration-200"
                      data-testid="TruncateEnd"
                    >
                      Mainsail Wallet …
                    </span>
                  </span>
                  <div
                    class="relative grow leading-[17px] sm:leading-5 text-left"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:leading-5 sm:text-base text-theme-secondary-500 dark:text-theme-secondary-700  font-semibold text-base absolute w-full"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                    <span>
                       
                    </span>
                  </div>
                  <button
                    class="ring-focus relative focus:outline-none"
                    data-ring-focus-margin="-m-1"
                    data-testid="clipboard-icon__wrapper"
                    type="button"
                  >
                    <div
                      class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50"
                    >
                      <div
                        style="height: 16px; width: 16px;"
                      >
                        <svg
                          id="copy"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                            />
                            <path
                              d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="space-y-3 sm:space-y-2"
      >
        <div
          class="mx-3 sm:mx-0"
        >
          <div
            data-testid="DetailWrapper"
          >
            <div
              class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
              data-testid="DetailLabel"
            >
              <div
                class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
                data-testid="DetailLabelText"
              >
                Transaction Summary
              </div>
            </div>
            <div
              class="overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-dark-700 sm:border rounded-xl mt-0 sm:mt-2"
            >
              <div
                class="w-full break-words p-3 sm:px-6 sm:py-5 [.condensed_&]:sm:py-4"
              >
                <div
                  class="flex flex-col gap-3"
                >
                  <div
                    class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
                    data-testid="AmountSection"
                  >
                    <div
                      class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-[85px] sm:pr-6"
                    >
                      Amount
                    </div>
                    <div
                      class="flex flex-row items-center gap-2"
                    >
                      <span
                        class="whitespace-nowrap font-semibold"
                        data-testid="Amount"
                      >
                        1 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <fieldset
        class="disableStateHints flex min-w-0 flex-col"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 hover:!text-theme-primary-600"
          data-testid="FormLabel"
          for="fee"
        >
          Transaction Fee
        </label>
        <div
          class="relative"
          data-testid="InputFee"
        >
          <div
            class="absolute right-0 -mt-7"
          >
            <div
              class="flex items-center"
            >
              <button
                class="font-semibold select-none text-sm first:mr-2 last:ml-2 text-theme-secondary-700 dark:text-theme-secondary-200 cursor-default"
                type="button"
              >
                Simple
              </button>
              <label
                class="flex items-center cursor-not-allowed h-3"
              >
                <input
                  class="toggle-input sr-only"
                  disabled=""
                  type="checkbox"
                />
                <div
                  class="toggle-handle relative inline-flex h-[5px] rounded-full bg-theme-primary-100 dark:bg-theme-secondary-800 w-6"
                >
                  <span
                    class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-100 dark:bg-theme-secondary-800 h-3 w-3"
                  />
                </div>
              </label>
              <button
                class="font-semibold select-none text-theme-secondary-500 dark:text-theme-secondary-700 text-sm first:mr-2 last:ml-2 cursor-default"
                type="button"
              >
                Advanced
              </button>
            </div>
          </div>
          <div
            class="inline-flex w-full items-center flex-col space-y-2 sm:flex-row sm:space-x-2 sm:space-y-0"
            data-testid="ButtonGroup"
            role="radiogroup"
          >
            <button
              aria-checked="false"
              aria-label="0"
              class="flex h-full w-full items-center justify-center border-2 border-theme-primary-100 font-semibold text-theme-secondary-700 transition-colors duration-300 hover:border-theme-primary-100 hover:bg-theme-primary-100 hover:text-theme-primary-700 focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:border disabled:border-theme-secondary-300 disabled:text-theme-secondary-500 aria-checked:border-theme-primary-600 aria-checked:bg-theme-primary-50 aria-checked:text-theme-primary-700 dark:text-theme-secondary-500 dark:hover:border-theme-secondary-800 dark:hover:bg-theme-secondary-800 dark:hover:text-theme-secondary-200 disabled:dark:border-theme-secondary-700 disabled:dark:text-theme-secondary-700 dark:aria-checked:cursor-default dark:aria-checked:text-theme-dark-50 rounded group p-0 dark:border-theme-dark-700 dark:group-hover:bg-theme-dark-700 dark:aria-checked:border-theme-dark-400 dark:aria-checked:bg-theme-dark-800"
              data-testid="ButtonGroupOption"
              role="radio"
              type="button"
            >
              <div
                class="flex w-full flex-col text-theme-secondary-700 transition-all dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50"
              >
                <div
                  class="flex items-center justify-between p-3 sm:flex-col sm:items-start sm:justify-start sm:space-y-2"
                >
                  <div
                    class="text-sm leading-[17px] sm:leading-5"
                  >
                    Slow
                  </div>
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton h-4"
                      style="width: 100px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
                <div
                  class="flex w-full justify-between px-3 py-2 text-xs font-semibold leading-[15px] text-theme-secondary-700 transition-all dark:text-theme-dark-200 bg-theme-navy-50 dark:bg-theme-dark-800 dark:group-hover:bg-theme-dark-600 dark:group-hover:text-theme-dark-50"
                >
                  <span>
                    Confirmation Time
                  </span>
                  <span>
                    ~10s
                  </span>
                </div>
              </div>
            </button>
            <button
              aria-checked="true"
              aria-label="0"
              class="flex h-full w-full items-center justify-center border-2 border-theme-primary-100 font-semibold text-theme-secondary-700 transition-colors duration-300 hover:border-theme-primary-100 hover:bg-theme-primary-100 hover:text-theme-primary-700 focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:border disabled:border-theme-secondary-300 disabled:text-theme-secondary-500 aria-checked:border-theme-primary-600 aria-checked:bg-theme-primary-50 aria-checked:text-theme-primary-700 dark:text-theme-secondary-500 dark:hover:border-theme-secondary-800 dark:hover:bg-theme-secondary-800 dark:hover:text-theme-secondary-200 disabled:dark:border-theme-secondary-700 disabled:dark:text-theme-secondary-700 dark:aria-checked:cursor-default dark:aria-checked:text-theme-dark-50 rounded group p-0 dark:border-theme-dark-700 dark:group-hover:bg-theme-dark-700 dark:aria-checked:border-theme-dark-400 dark:aria-checked:bg-theme-dark-800"
              data-testid="ButtonGroupOption"
              role="radio"
              type="button"
            >
              <div
                class="flex w-full flex-col text-theme-secondary-700 transition-all dark:text-theme-dark-200"
              >
                <div
                  class="flex items-center justify-between p-3 sm:flex-col sm:items-start sm:justify-start sm:space-y-2"
                >
                  <div
                    class="text-sm leading-[17px] sm:leading-5 text-theme-navy-700 dark:text-theme-dark-50"
                  >
                    Average
                  </div>
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton h-4"
                      style="width: 100px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
                <div
                  class="flex w-full justify-between px-3 py-2 text-xs font-semibold leading-[15px] text-theme-secondary-700 transition-all dark:text-theme-dark-200 bg-theme-navy-100 dark:bg-theme-dark-500"
                >
                  <span>
                    Confirmation Time
                  </span>
                  <span>
                    ~5s
                  </span>
                </div>
              </div>
            </button>
            <button
              aria-checked="false"
              aria-label="0"
              class="flex h-full w-full items-center justify-center border-2 border-theme-primary-100 font-semibold text-theme-secondary-700 transition-colors duration-300 hover:border-theme-primary-100 hover:bg-theme-primary-100 hover:text-theme-primary-700 focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:border disabled:border-theme-secondary-300 disabled:text-theme-secondary-500 aria-checked:border-theme-primary-600 aria-checked:bg-theme-primary-50 aria-checked:text-theme-primary-700 dark:text-theme-secondary-500 dark:hover:border-theme-secondary-800 dark:hover:bg-theme-secondary-800 dark:hover:text-theme-secondary-200 disabled:dark:border-theme-secondary-700 disabled:dark:text-theme-secondary-700 dark:aria-checked:cursor-default dark:aria-checked:text-theme-dark-50 rounded group p-0 dark:border-theme-dark-700 dark:group-hover:bg-theme-dark-700 dark:aria-checked:border-theme-dark-400 dark:aria-checked:bg-theme-dark-800"
              data-testid="ButtonGroupOption"
              role="radio"
              type="button"
            >
              <div
                class="flex w-full flex-col text-theme-secondary-700 transition-all dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50"
              >
                <div
                  class="flex items-center justify-between p-3 sm:flex-col sm:items-start sm:justify-start sm:space-y-2"
                >
                  <div
                    class="text-sm leading-[17px] sm:leading-5"
                  >
                    Fast
                  </div>
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton h-4"
                      style="width: 100px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
                <div
                  class="flex w-full justify-between px-3 py-2 text-xs font-semibold leading-[15px] text-theme-secondary-700 transition-all dark:text-theme-dark-200 bg-theme-navy-50 dark:bg-theme-dark-800 dark:group-hover:bg-theme-dark-600 dark:group-hover:text-theme-dark-50"
                >
                  <span>
                    Confirmation Time
                  </span>
                  <span>
                    ~2s
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
      </fieldset>
    </div>
  </section>
</DocumentFragment>
`;

exports[`SendTransfer > should render review step with multiple recipients (%s) 1`] = `
<DocumentFragment>
  <section
    data-testid="SendTransfer__review-step"
  >
    <div
      class="w-full sm:mt-8"
    >
      <div
        class="flex flex-col"
      >
        <span
          class="mx-auto mb-2 inline-block font-semibold text-theme-secondary-text sm:hidden"
        >
          Transaction Review
        </span>
        <ul
          class="flex flex-row gap-2"
        >
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-warning-300"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
          />
          <li
            class="h-1 flex-1 rounded-[4px] transition-colors duration-300 bg-theme-primary-100 dark:bg-theme-secondary-800"
          />
        </ul>
      </div>
      <div
        class="flex flex-col justify-between sm:flex-row"
      >
        <div
          class="flex items-end justify-between bg-theme-background mt-8 hidden sm:block"
        >
          <div
            class="space-y-2"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="text-theme-primary-600"
                data-testid="icon-DocumentView"
              >
                <div
                  style="height: 24px; width: 24px;"
                >
                  <svg
                    fill="none"
                    height="25"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 24 25"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clip-path="url(#clip0_13880_105917)"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M18.8821 8.94457H13.7264C13.0146 8.94457 12.4375 8.3675 12.4375 7.65565V2.5"
                        fill="none"
                        fill-rule="evenodd"
                      />
                      <path
                        d="M18.8821 8.94457H13.7264C13.0146 8.94457 12.4375 8.3675 12.4375 7.65565V2.5"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        d="M5.99174 21.8337H3.41391C2.70207 21.8337 2.125 21.2566 2.125 20.5448V3.78891C2.125 3.07707 2.70207 2.5 3.41391 2.5H12.5472C12.8891 2.49985 13.217 2.63554 13.4588 2.87722L18.5037 7.92289C18.7451 8.16452 18.8808 8.49212 18.8809 8.83372V12.8113"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M8.35938 19.3003C8.35938 19.3003 10.9372 15.4336 14.8039 15.4336C18.6707 15.4336 21.2485 19.3003 21.2485 19.3003C21.2485 19.3003 18.6707 23.1671 14.8039 23.1671C10.9372 23.1671 8.35938 19.3003 8.35938 19.3003Z"
                        fill="none"
                        fill-rule="evenodd"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                      <path
                        d="M13.8984 20.6287C14.633 21.1309 15.6355 20.9426 16.1378 20.2081C16.64 19.4736 16.4517 18.471 15.7172 17.9688"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </g>
                    <defs>
                      <clippath
                        id="clip0_13880_105917"
                      >
                        <rect
                          fill="white"
                          height="24"
                          transform="translate(24 24.5) rotate(-180)"
                          width="24"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </div>
              </div>
              <h1
                class="mb-0 text-2xl leading-[29px]"
                data-testid="header__title"
              >
                Transaction Review
              </h1>
            </div>
            <div
              class="flex items-center text-sm leading-5 text-theme-secondary-text md:text-base"
              data-testid="header__subtitle"
            >
              Review the transaction details below.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="-mx-3 mt-4 space-y-3 sm:mx-0 sm:space-y-4"
    >
      <div
        data-testid="DetailWrapper"
      >
        <div
          class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
          data-testid="DetailLabel"
        >
          <div
            class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
            data-testid="DetailLabelText"
          >
            Addressing
          </div>
        </div>
        <div
          class="overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-dark-700 sm:border flex flex-col gap-3 mt-0 sm:mt-2"
        >
          <div
            class="w-full break-words p-3 sm:px-6 sm:py-5 [.condensed_&]:sm:py-4"
          >
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-14 sm:min-w-[85px] sm:pr-6"
              >
                From
              </div>
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end sm:justify-start"
              >
                <span
                  class="font-semibold text-base text-theme-text text-sm leading-[17px] sm:leading-5 sm:text-base"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures transition-colors duration-200"
                    data-testid="TruncateEnd"
                  >
                    Mainsail Wallet …
                  </span>
                </span>
                <div
                  class="relative grow leading-[17px] sm:leading-5 text-left"
                >
                  <span
                    class="no-ligatures min-w-0 overflow-hidden text-sm leading-[17px] sm:leading-5 sm:text-base w-full w-3/4 text-theme-secondary-500 dark:text-theme-secondary-700  font-semibold text-base absolute w-full"
                    data-testid="Address__address"
                  >
                    0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                  </span>
                  <span>
                     
                  </span>
                </div>
                <button
                  class="ring-focus relative focus:outline-none"
                  data-ring-focus-margin="-m-1"
                  data-testid="clipboard-icon__wrapper"
                  type="button"
                >
                  <div
                    class="text-theme-secondary-700 hover:text-theme-primary-700 dark:text-theme-dark-200 dark:hover:text-theme-dark-50"
                  >
                    <div
                      style="height: 16px; width: 16px;"
                    >
                      <svg
                        id="copy"
                        style="height: 100%; width: 100%;"
                        viewBox="0 0 20 20"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <g
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        >
                          <path
                            d="M7 17.765C7 18.485 7.496 19 8.09 19h-.099 8.82c.694 0 1.189-.618 1.189-1.235V6.235C18 5.515 17.405 5 16.81 5h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C7 8.09 7 8.397 7 8.706v9.059z"
                          />
                          <path
                            d="M13 5V2.235C13 1.515 12.405 1 11.81 1h0-6.242c-.298 0-.595.103-.892.309l-2.379 2.47C2 4.09 2 4.397 2 4.706v9.059C2 14.485 2.496 15 3.09 15h-.099H7"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="mt-3 flex w-full items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-14 sm:min-w-[85px] sm:pr-6"
              >
                To
              </div>
              <div
                class="flex items-center"
              >
                <span
                  class="inline-flex items-center gap-1 text-sm font-semibold leading-[17px] sm:text-base sm:leading-5"
                >
                  <span>
                    Multiple 
                  </span>
                  <span
                    class="text-theme-secondary-700 dark:text-theme-secondary-500"
                    data-testid="TransactionRecipientsModal--RecipientsCount"
                  >
                    (2) 
                  </span>
                </span>
                <div
                  class="h-5 leading-5"
                >
                  <div
                    class="h-5 relative mx-2 inline-block border-l border-t-0 border-solid align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
                  />
                </div>
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none p-0 text-sm leading-[17px] text-theme-navy-600 underline decoration-theme-navy-600 decoration-dashed decoration-1 underline-offset-4 sm:text-base sm:leading-5"
                  data-testid="TransactionRecipientsModal--ShowList"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    View Full List
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="space-y-3 sm:space-y-2"
      >
        <div
          class="mx-3 sm:mx-0"
        >
          <div
            data-testid="DetailWrapper"
          >
            <div
              class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
              data-testid="DetailLabel"
            >
              <div
                class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
                data-testid="DetailLabelText"
              >
                Transaction Summary
              </div>
            </div>
            <div
              class="overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-dark-700 sm:border rounded-xl mt-0 sm:mt-2"
            >
              <div
                class="w-full break-words p-3 sm:px-6 sm:py-5 [.condensed_&]:sm:py-4"
              >
                <div
                  class="flex flex-col gap-3"
                >
                  <div
                    class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
                    data-testid="AmountSection"
                  >
                    <div
                      class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-[85px] sm:pr-6"
                    >
                      Amount
                    </div>
                    <div
                      class="flex flex-row items-center gap-2"
                    >
                      <span
                        class="whitespace-nowrap font-semibold"
                        data-testid="Amount"
                      >
                        2 ARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <fieldset
        class="disableStateHints flex min-w-0 flex-col"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100 hover:!text-theme-primary-600"
          data-testid="FormLabel"
          for="fee"
        >
          Transaction Fee
        </label>
        <div
          class="relative"
          data-testid="InputFee"
        >
          <div
            class="absolute right-0 -mt-7"
          >
            <div
              class="flex items-center"
            >
              <button
                class="font-semibold select-none text-sm first:mr-2 last:ml-2 text-theme-secondary-700 dark:text-theme-secondary-200 cursor-default"
                type="button"
              >
                Simple
              </button>
              <label
                class="flex items-center cursor-not-allowed h-3"
              >
                <input
                  class="toggle-input sr-only"
                  disabled=""
                  type="checkbox"
                />
                <div
                  class="toggle-handle relative inline-flex h-[5px] rounded-full bg-theme-primary-100 dark:bg-theme-secondary-800 w-6"
                >
                  <span
                    class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-100 dark:bg-theme-secondary-800 h-3 w-3"
                  />
                </div>
              </label>
              <button
                class="font-semibold select-none text-theme-secondary-500 dark:text-theme-secondary-700 text-sm first:mr-2 last:ml-2 cursor-default"
                type="button"
              >
                Advanced
              </button>
            </div>
          </div>
          <div
            class="inline-flex w-full items-center flex-col space-y-2 sm:flex-row sm:space-x-2 sm:space-y-0"
            data-testid="ButtonGroup"
            role="radiogroup"
          >
            <button
              aria-checked="false"
              aria-label="0"
              class="flex h-full w-full items-center justify-center border-2 border-theme-primary-100 font-semibold text-theme-secondary-700 transition-colors duration-300 hover:border-theme-primary-100 hover:bg-theme-primary-100 hover:text-theme-primary-700 focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:border disabled:border-theme-secondary-300 disabled:text-theme-secondary-500 aria-checked:border-theme-primary-600 aria-checked:bg-theme-primary-50 aria-checked:text-theme-primary-700 dark:text-theme-secondary-500 dark:hover:border-theme-secondary-800 dark:hover:bg-theme-secondary-800 dark:hover:text-theme-secondary-200 disabled:dark:border-theme-secondary-700 disabled:dark:text-theme-secondary-700 dark:aria-checked:cursor-default dark:aria-checked:text-theme-dark-50 rounded group p-0 dark:border-theme-dark-700 dark:group-hover:bg-theme-dark-700 dark:aria-checked:border-theme-dark-400 dark:aria-checked:bg-theme-dark-800"
              data-testid="ButtonGroupOption"
              role="radio"
              type="button"
            >
              <div
                class="flex w-full flex-col text-theme-secondary-700 transition-all dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50"
              >
                <div
                  class="flex items-center justify-between p-3 sm:flex-col sm:items-start sm:justify-start sm:space-y-2"
                >
                  <div
                    class="text-sm leading-[17px] sm:leading-5"
                  >
                    Slow
                  </div>
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton h-4"
                      style="width: 100px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
                <div
                  class="flex w-full justify-between px-3 py-2 text-xs font-semibold leading-[15px] text-theme-secondary-700 transition-all dark:text-theme-dark-200 bg-theme-navy-50 dark:bg-theme-dark-800 dark:group-hover:bg-theme-dark-600 dark:group-hover:text-theme-dark-50"
                >
                  <span>
                    Confirmation Time
                  </span>
                  <span>
                    ~10s
                  </span>
                </div>
              </div>
            </button>
            <button
              aria-checked="true"
              aria-label="0"
              class="flex h-full w-full items-center justify-center border-2 border-theme-primary-100 font-semibold text-theme-secondary-700 transition-colors duration-300 hover:border-theme-primary-100 hover:bg-theme-primary-100 hover:text-theme-primary-700 focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:border disabled:border-theme-secondary-300 disabled:text-theme-secondary-500 aria-checked:border-theme-primary-600 aria-checked:bg-theme-primary-50 aria-checked:text-theme-primary-700 dark:text-theme-secondary-500 dark:hover:border-theme-secondary-800 dark:hover:bg-theme-secondary-800 dark:hover:text-theme-secondary-200 disabled:dark:border-theme-secondary-700 disabled:dark:text-theme-secondary-700 dark:aria-checked:cursor-default dark:aria-checked:text-theme-dark-50 rounded group p-0 dark:border-theme-dark-700 dark:group-hover:bg-theme-dark-700 dark:aria-checked:border-theme-dark-400 dark:aria-checked:bg-theme-dark-800"
              data-testid="ButtonGroupOption"
              role="radio"
              type="button"
            >
              <div
                class="flex w-full flex-col text-theme-secondary-700 transition-all dark:text-theme-dark-200"
              >
                <div
                  class="flex items-center justify-between p-3 sm:flex-col sm:items-start sm:justify-start sm:space-y-2"
                >
                  <div
                    class="text-sm leading-[17px] sm:leading-5 text-theme-navy-700 dark:text-theme-dark-50"
                  >
                    Average
                  </div>
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton h-4"
                      style="width: 100px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
                <div
                  class="flex w-full justify-between px-3 py-2 text-xs font-semibold leading-[15px] text-theme-secondary-700 transition-all dark:text-theme-dark-200 bg-theme-navy-100 dark:bg-theme-dark-500"
                >
                  <span>
                    Confirmation Time
                  </span>
                  <span>
                    ~5s
                  </span>
                </div>
              </div>
            </button>
            <button
              aria-checked="false"
              aria-label="0"
              class="flex h-full w-full items-center justify-center border-2 border-theme-primary-100 font-semibold text-theme-secondary-700 transition-colors duration-300 hover:border-theme-primary-100 hover:bg-theme-primary-100 hover:text-theme-primary-700 focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:border disabled:border-theme-secondary-300 disabled:text-theme-secondary-500 aria-checked:border-theme-primary-600 aria-checked:bg-theme-primary-50 aria-checked:text-theme-primary-700 dark:text-theme-secondary-500 dark:hover:border-theme-secondary-800 dark:hover:bg-theme-secondary-800 dark:hover:text-theme-secondary-200 disabled:dark:border-theme-secondary-700 disabled:dark:text-theme-secondary-700 dark:aria-checked:cursor-default dark:aria-checked:text-theme-dark-50 rounded group p-0 dark:border-theme-dark-700 dark:group-hover:bg-theme-dark-700 dark:aria-checked:border-theme-dark-400 dark:aria-checked:bg-theme-dark-800"
              data-testid="ButtonGroupOption"
              role="radio"
              type="button"
            >
              <div
                class="flex w-full flex-col text-theme-secondary-700 transition-all dark:text-theme-dark-200 dark:group-hover:text-theme-dark-50"
              >
                <div
                  class="flex items-center justify-between p-3 sm:flex-col sm:items-start sm:justify-start sm:space-y-2"
                >
                  <div
                    class="text-sm leading-[17px] sm:leading-5"
                  >
                    Fast
                  </div>
                  <span
                    aria-busy="true"
                    aria-live="polite"
                    class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                  >
                    <span
                      class="react-loading-skeleton h-4"
                      style="width: 100px;"
                    >
                      ‌
                    </span>
                    <br />
                  </span>
                </div>
                <div
                  class="flex w-full justify-between px-3 py-2 text-xs font-semibold leading-[15px] text-theme-secondary-700 transition-all dark:text-theme-dark-200 bg-theme-navy-50 dark:bg-theme-dark-800 dark:group-hover:bg-theme-dark-600 dark:group-hover:text-theme-dark-50"
                >
                  <span>
                    Confirmation Time
                  </span>
                  <span>
                    ~2s
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
      </fieldset>
    </div>
  </section>
</DocumentFragment>
`;
